--- a/home.html
+++ b/home.html
@@ -12,21 +12,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Neonderthaw&family=Tilt+Neon&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="container">
+<div class="home">
     <header>
-        <h1>Brandeis'</h1>
+        <h1>Donovan's</h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Drinks</a></li>
-                <li><a href="#">About the place</a></li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="drinks.html">Drinks</a></li>
+                <li><a href="about.html">About the place</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section>
-            <h2>Brandeis' Club</h2>
-            <img src="drinks.jpg" alt="A picture with neon light cocktails.">
+            <h2>Donovan's Club</h2>
+            <h3>Opening Hours</h3>
+            <p>Mon: Closed</p>
+            <p>Tue-Thu: 17:00-2:00</p>
+            <p>Fri-Sun: 17:00-5:00</p>
+            <img src="images/drinks.jpg" alt="A picture with neon light cocktails.">
         </section>
     </main>
     <footer>
