put all pages in the same html file; fixed header position.

--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
             <p>Mon: Closed</p>
             <p>Tue-Thu: 17:00-2:00</p>
             <p>Fri-Sun: 17:00-5:00</p>
-            <img src="images/drinks.jpg" alt="A picture with neon light cocktails.">
+            <img src="/images/drinks.jpg" alt="A picture with neon light cocktails.">
         </section>
         <section id="drinks">
             <h2>Drink List</h2>
