put all pages in the same html file; fixed header position.

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link href="/css/style.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Neonderthaw&display=swap" rel="stylesheet">
@@ -30,31 +30,31 @@
             <p>Mon: Closed</p>
             <p>Tue-Thu: 17:00-2:00</p>
             <p>Fri-Sun: 17:00-5:00</p>
-            <img src="/images/drinks.jpg" alt="A picture with neon light cocktails.">
+            <img src="images/drinks.jpg" alt="A picture with neon light cocktails.">
         </section>
         <section id="drinks">
             <h2>Drink List</h2>
             <article>
                 <h3>Red Strings</h3>
-                <img src="/images/redstring.jpg" alt="a picture of red cocktail">
+                <img src="images/redstring.jpg" alt="a picture of red cocktail">
                 <p>Raspberry Vodka, Triple Sec, Grenadine Syrup, Cranberry Juice, Fresh Raspberries, Ice</p>
                 <p>You can't change where the strings go.</p>
             </article>
             <article>
                 <h3>Amnesia Pill</h3>
-                <img src="/images/forget.jpg" alt="an image of brown cocktail">
+                <img src="images/forget.jpg" alt="an image of brown cocktail">
                 <p>Gin, elderflower liqueur, fresh Lemon juice, orange bitters, lemon twist, ice</p>
                 <p>For someone or yourself?</p>
             </article>
             <article>
                 <h3>Circuit Sour</h3>
-                <img src="/images/sour.jpg" alt="a glass of sour whiskey">
+                <img src="images/sour.jpg" alt="a glass of sour whiskey">
                 <p> Whiskey, lemon juice, simple syrup, ice</p>
                 <p>Simple and classic sour whiskey.</p>
             </article>
             <article>
                 <h3>Brandies, I love you too</h3>
-                <img src="/images/dark.jpg" alt="a glass of dark cocktail with cherry">
+                <img src="images/dark.jpg" alt="a glass of dark cocktail with cherry">
                 <p>Rum, amaretto liqueur, sweet vermouth, Angostura bitters, maraschino cherry, ice</p>
                 <p>Dedicated to an old friend.</p>
             </article>
