--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
             <article>
                 <h3>Red Strings</h3>
                 <img src="images/redstring.jpg" alt="a picture of red cocktail">
-                <p>Raspberry Vodka, Triple Sec, Grenadine Syrup, Cranberry Juice, Fresh Raspberries, Ice</p>
+                <p>Raspberry Vodka, triple Sec, grenadine syrup, cranberry juice, fresh raspberries, ice</p>
                 <p>You can't change where the strings go.</p>
             </article>
             <article>
@@ -55,20 +55,20 @@
             <article>
                 <h3>Brandies, I love you too</h3>
                 <img src="images/dark.jpg" alt="a glass of dark cocktail with cherry">
-                <p>Rum, amaretto liqueur, sweet vermouth, Angostura bitters, maraschino cherry, ice</p>
+                <p>Rum, amaretto liqueur, sweet vermouth, angostura bitters, maraschino cherry, ice</p>
                 <p>Dedicated to an old friend.</p>
             </article>
         </section>
         <section id="about">
             <h2>About the Place</h2>
-            <article>
+            <div id="introduction">
                 <p>The club owner Donovan opened this place in memory of Brandies, an old friend and the love of his
                     life.</p>
                 <p>This page is inspired by adventure game "The Red Strings Club" by Deconstructteam. The game set in a
                     cyberpunk world. Donovan, Brandeis, and Akara-184 are working
                     together to stop Supercontinent from releasing a system known as Social Psyche Welfare, which alters
                     the minds of all implanted humans in order to eliminate "negative emotions".</p>
-            </article>
+            </div>
         </section>
     </main>
     <footer>
